--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
     src: url("TheonoryFreeVersionRegular-gxg03.ttf");
   }
 
+  @media only screen and (max-width: 480px) and (min-width: 360px){
+  h3 {
+    font-size: .1em;
+}
+  }xx
+
 .grid-container{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -17,6 +23,7 @@
   grid-template-columns: repeat(2, 1fr);
   margin-bottom: 1em;
   gap: 1.5em;
+  padding;
 }
 
 .item1 {
@@ -188,11 +195,10 @@ h2{
     font-weight: 500;
     background: white;
     width: 70%;
+    border-radius: ;
     animation: round .6s;
     animation-fill-mode: both;
     transition-timing-function: ease;
-    white-space:nowrap;
-
   }
 
 .book {
